Autoformat java files in test/com/facebook/buck/distributed.
Test Plan: CI

Reviewed By: marcinkosiba

fbshipit-source-id: 0ed5b3e